--- a/CandyShop/Views/Shared/_Layout.cshtml
+++ b/CandyShop/Views/Shared/_Layout.cshtml
@@ -29,8 +29,7 @@
                         @await Component.InvokeAsync("CategoryMenu")
                         <li><a asp-controller="Contact" asp-action="Index">Contact</a></li>
                         @await Component.InvokeAsync("ShopingCartSummary")
-
-                    </ul>
+                        <partial name="_LoginPartial" />
                 </div>
             </div>
         </nav>
@@ -54,6 +53,7 @@
                 @RenderBody()
             </div>
         </div>
+        @RenderSection("Scripts", required: false)
     </div>
 </body>
 </html>
