--- a/CandyShop/Views/ShoppingCart/Index.cshtml
+++ b/CandyShop/Views/ShoppingCart/Index.cshtml
@@ -35,5 +35,5 @@
 
 <div class="text-center">
     <a class="btn btn-primary" asp-controller="ShoppingCart" asp-action="ClearCart">Clear Cart</a>
-    <a class="btn btn-primary" asp-controller="Order" asp-action="Checkout">Checkout</a>
+    <a class="btn btn-primary" asp-controller="Order" asp-action="Chekout">Checkout</a>
 </div>
